--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -64,6 +64,8 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-660: Logs too noisy on NIOServerFactory when client drops a connection (mmerli via ivank)
 
+        BOOKKEEPER-632: AutoRecovery should consider read only bookies (vinay via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
