BOOKKEEPER-649: Race condition in sync ZKUtils.createFullPathOptimistic() (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1516465 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -94,6 +94,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-632: AutoRecovery should consider read only bookies (vinay via ivank)
 
+        BOOKKEEPER-649: Race condition in sync ZKUtils.createFullPathOptimistic() (ivank)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
