--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -66,6 +66,8 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-632: AutoRecovery should consider read only bookies (vinay via ivank)
 
+        BOOKKEEPER-649: Race condition in sync ZKUtils.createFullPathOptimistic() (ivank)
+
       hedwig-server:
 
         BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
