BOOKKEEPER-580: improve close logic (sijie & ivank via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1516929 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -96,6 +96,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-649: Race condition in sync ZKUtils.createFullPathOptimistic() (ivank)
 
+        BOOKKEEPER-580: improve close logic (sijie & ivank via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
