--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -72,6 +72,8 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-664: Compaction increases latency on journal writes (ivank & sijie via ivank)
 
+        BOOKKEEPER-679: Bookie should exit with non-zero if NIOServer crashes with Error (ivank)
+
       hedwig-server:
 
         BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
