--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -74,6 +74,8 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-679: Bookie should exit with non-zero if NIOServer crashes with Error (ivank)
 
+        BOOKKEEPER-669: Race condition in ledger deletion and eviction from cache (rakeshr via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
