--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -108,6 +108,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-607: Filtered Messages Require ACK from Client Causes User Being Throttled Incorrectly Forever (sijie via ivank)
 
+        BOOKKEEPER-683: TestSubAfterCloseSub fails on 4.2 (jiannan via ivank)
+
       hedwig-client:
 
         BOOKKEEPER-598: Fails to compile - RESUBSCRIBE_EXCEPTION conflict (Matthew Farrellee via sijie)
