--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -156,6 +156,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-640: Log improvement - add shutdown/exit log message for the bookie services (rakesh via sijie)
 
+      BOOKKEEPER-666: Naming threads of ExecutorService (rakesh via sijie)
+
     NEW FEATURE:
 
       BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj)
