--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -158,6 +158,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-666: Naming threads of ExecutorService (rakesh via sijie)
 
+      BOOKKEEPER-645: Bookkeeper shell command to get a list of readonly bookies (rakesh via sijie)
+
     NEW FEATURE:
 
       BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj)
