BOOKKEEPER-685: Race in compaction algorithm from BOOKKEEPER-664 (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.2@1528399 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -84,6 +84,8 @@ Release 4.2.2 - 2013-09-10
 
         BOOKKEEPER-627: LedgerDirsMonitor is missing thread name (rakeshr via ivank)
 
+        BOOKKEEPER-685: Race in compaction algorithm from BOOKKEEPER-664 (ivank)
+
       hedwig-server:
 
         BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
