--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -162,6 +162,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-645: Bookkeeper shell command to get a list of readonly bookies (rakesh via sijie)
 
+      BOOKKEEPER-658: ledger cache refactor (Robin Dhamankar via sijie)
+
     NEW FEATURE:
 
       BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj)
