BOOKKEEPER-657: Journal Improvement (Robin Dhamankar via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1531494 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -166,6 +166,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-658: ledger cache refactor (Robin Dhamankar via sijie)
 
+      BOOKKEEPER-657: Journal Improvement (Robin Dhamankar via sijie)
+
     NEW FEATURE:
 
       BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj)
