BOOKKEEPER-676: Make add asynchrounous in ledger recovery (aniruddha via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1531944 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -108,6 +108,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-638: Two bookies could start at the same time to access bookie data. (sijie via ivank)
 
+        BOOKKEEPER-676: Make add asynchrounous in ledger recovery (aniruddha via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
