BOOKKEEPER-664: Compaction increases latency on journal writes (ivank via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1534503 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -176,6 +176,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-657: Journal Improvement (Robin Dhamankar via sijie)
 
+      BOOKKEEPER-664: Compaction increases latency on journal writes (ivank via sijie)
+
     NEW FEATURE:
 
       BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj)
