--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -190,6 +190,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-698: Bookie client closure is not considering timeoutExecutor (rakesh via sijie)
 
+      BOOKKEEPER-699: Codahale metrics implementation of stats API (ivank via sijie)
+
     NEW FEATURE:
 
       BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj)
