--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,13 @@
+Release 4.2.3 - 2013-12-04
+
+  Backward compatible changes:
+
+    BUGFIXES:
+
+      bookkeeper-server:
+
+        BOOKKEEPER-711: bookkeeper-daemon.sh will not remove the pid file one successful stop (vinay via sijie)
+
 Release 4.2.2 - 2013-10-02
 
   Backward compatible changes:
