--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -200,6 +200,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-699: Codahale metrics implementation of stats API (ivank via sijie)
 
+      BOOKKEEPER-701: Improve exception handling of Bookkeeper threads (rakesh via sijie)
+
     NEW FEATURE:
 
       BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj)
