BOOKKEEPER-714: Logging channel exceptions in PerChannelBookieClient (sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1556732 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -132,6 +132,8 @@ Trunk (unreleased changes)
 
 	BOOKKEEPER-709: SlowBookieTest#testSlowBookie fails intermittently (Rakesh R via fpj)
 
+        BOOKKEEPER-714: Logging channel exceptions in PerChannelBookieClient (sijie)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
