--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -150,6 +150,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-643: Improve concurrency of entry logger (sijie & Aniruddha via ivank)
 
+        BOOKKEEPER-703: Document all the settings added in BOOKKEEPER-656 (sijie)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
