BOOKKEEPER-727: Names of bookie write/read threads are backwards (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1564949 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -154,6 +154,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-703: Document all the settings added in BOOKKEEPER-656 (sijie)
 
+        BOOKKEEPER-727: Names of bookie write/read threads are backwards (ivank via fpj)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
