BOOKKEEPER-715: bookie: delay dropping journal cached pages (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1575246 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -170,6 +170,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-717: journal should look forward to group time-out entries (sijie via ivank)
 
+        BOOKKEEPER-715: bookie: delay dropping journal cached pages (sijie via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
