BOOKKEEPER-363: Re-distributing topics among newly added hubs. (aniruddha via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1575338 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -182,6 +182,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-683: TestSubAfterCloseSub fails on 4.2 (jiannan via ivank)
 
+        BOOKKEEPER-363: Re-distributing topics among newly added hubs. (aniruddha via ivank)
+
       hedwig-client:
 
         BOOKKEEPER-598: Fails to compile - RESUBSCRIBE_EXCEPTION conflict (Matthew Farrellee via sijie)
