--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,8 @@ Release 4.2.3 - 2013-12-04
 
         BOOKKEEPER-602: we should have request timeouts rather than channel timeout in PerChannelBookieClient (Aniruddha via sijie)
 
+        BOOKKEEPER-714: Logging channel exceptions in PerChannelBookieClient (sijie)
+
 Release 4.2.2 - 2013-10-02
 
   Backward compatible changes:
