--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -174,6 +174,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-730: Shade pom file missing apache license header (ivank)
 
+        BOOKKEEPER-740: AutoRecoveryMainTest#testAutoRecoverySessionLoss is failing (Rakesh via sijie)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
