BOOKKEEPER-742: Fix for empty ledgers losing quorum. (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1589636 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -178,6 +178,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-432: Improve performance of entry log range read per ledger entries (yixue, sijie via ivank)
 
+        BOOKKEEPER-742: Fix for empty ledgers losing quorum. (ivank)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
